--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "reveal.js"]
 	path = reveal.js
 	url = https://github.com/hakimel/reveal.js.git
+[submodule "embed-tweet"]
+	path = reveal.js-plugins
+	url = https://github.com/rajgoel/reveal.js-plugins.git
+[submodule "reveal-alt-arrows"]
+	path = reveal-alt-arrows
+	url = https://github.com/bunopus/reveal-alt-arrows.git
